--- a/Definitions/todo.txt
+++ b/Definitions/todo.txt
@@ -31,3 +31,9 @@ xor [0,1;2] = nand [0,1;3] or [0,1;6] and [6,3;2]  root in:
 xorTest [0,1;4] = or [0,1;2] nand [0,1;3] and [2,3;4]  root in: 
 
 A veces optimiza bien xor y a veces no (al debuguearlo si y ejecutarlo no, etc...)
+
+PASOS:
+	-mirar si la representación en NAND de XOR es siempre igual
+	-mirar si transforma siempre igual la representación NAND de XOR a definiciones
+	-CORREGIRLO
+
