Some fixes to keep track of nodes while optimizing TODO:keep track of all nodes, some mising

--- a/Definitions/todo.txt
+++ b/Definitions/todo.txt
@@ -96,3 +96,4 @@ y además 40 no es outOfInstance!!!
 -change subnodes and supernodes to parents and children
 -try to use only parents (no children)
 -try to remove "nodes" from definition
+-make algorithms recursive for children (children can have children too)
