Fixing redundant subnodes

--- a/Definitions/todo.txt
+++ b/Definitions/todo.txt
@@ -1,4 +1,5 @@
-﻿-independent size of variables 0(n)=0(1) (->cmp ->eq0 ->if) <-> recursive def if
+﻿-fix 6(0{0}&0{1}&5){2} -> 5{2} (->5 if size=1)
+-independent size of variables 0(n)=0(1) (->cmp ->eq0 ->if) <-> recursive def if?¿
 -test a nand with one in bigger than the other (+nodes)
 -fill with 0 on left if the size of one input is less than expected (ifdef)
 -define mul
