--- a/Definitions/todo.txt
+++ b/Definitions/todo.txt
@@ -1,22 +1,26 @@
-﻿-fix 6(0{0}&0{1}&5){2} -> 5{2} (->5 if size=1)
--independent size of variables 0(n)=0(1) (->cmp ->eq0 ->if) <-> recursive def if?¿
--test a nand with one in bigger than the other (+nodes)
--fill with 0 on left if the size of one input is less than expected (ifdef)
--define mul
+﻿-fix removeRedundantSubnodes
+-make algorithms recursive for children (children can have children too)
+-node fusion
+	if all the subnodes of a nodeOut have as ins subnodes of the same nodes nodeIn1 and nodeIn2, replace with nand(node2,node3,node1)
+	add [7(18&19&20),8(21&22&23);6(17&25)] = xor [20,23;25] xor [18,21;26] xor [19,22;27] and [19,22;28] and [20,23;29] add [16(26&27),15(28&29);17]  root in: 
+	to
+	add [7(0&1&2),8(3&4&5);6(17&12)] = xor [7(0&1&2),8(3&4&5);9(10&11&12)] and [13(1&2),14(4&5);15] add [16(10&11),15;17]  root in: 
+-execute definition (to test)
+-get mul to work
 	mul(a,b;c) d=0 add(a,d,d) b times c=d
 	recursive mul:
 	mul(a,b,c)= mul(a,b-1,d)&add(d,a,c)
 -interseccion entre iteraciones de los bucles
--nandfusion
-
-	add [7(18&19&20),8(21&22&23);6(17&25)] = xor [20,23;25] xor [18,21;26] xor [19,22;27] and [19,22;28] and [20,23;29] add [16(26&27),15(28&29);17]  root in: 
-	to
-	add [7(0&1&2),8(3&4&5);6(17&12)] = xor [7(0&1&2),8(3&4&5);9(10&11&12)] and [13(1&2),14(4&5);15] add [16(10&11),15;17]  root in: 
 
 
-	if all the subnodes of a nodeOut have as ins subnodes of the same nodes nodeIn1 and nodeIn2, replace with nand(node2,node3,node1)
 
+-independent size of variables 0(n)=0(1) (->cmp ->eq0 ->if) <-> recursive def if?¿
+	-test a nand with one in bigger than the other (+nodes)
+	-fill with 0 on left if the size of one input is less than expected (ifdef)
 -Optimize dropping ops before logical one or zero (already?). Remember to conserve size.
+	-short-circuited?
+-try to use only parents (no children) (doesn't seem posible)
+-try to remove "nodes" from definition (not practical)
 
 ////////////
 BUGS
@@ -96,7 +100,7 @@ problema:40 supernodes: 21
 y además 40 no es outOfInstance!!!
 
 
+
+
+DONE
 -change subnodes and supernodes to parents and children
--try to use only parents (no children)
--try to remove "nodes" from definition
--make algorithms recursive for children (children can have children too)
