new Node eval() replacing adaptative

--- a/Definitions/todo.txt
+++ b/Definitions/todo.txt
@@ -1,4 +1,7 @@
-﻿-nandFission shoudn't remove any node
+﻿-fix eval
+-eval cost AS
+-fix fussion
+-fix fission:nandFission shoudn't remove any node
 -always evaluate instances first, else nodes
 -sqrt
 -add arrays of nodes to definition
