--- a/Definitions/todo.txt
+++ b/Definitions/todo.txt
@@ -1,31 +1,37 @@
-﻿-fix eval
--eval cost AS
--fix fussion
+﻿-fix eval cost
 -fix fission:nandFission shoudn't remove any node
--always evaluate instances first, else nodes
+-fix fussion
+
+-fix optimization interseccion entre iteraciones de los bucles
 -sqrt
 -add arrays of nodes to definition
--interseccion entre iteraciones de los bucles
+-fix toBest to be restrictive (subnodes etc... must be exactly the same to replace)
 -todo: recursive intersection merge (if/rif)
--fix eval of definitions
-	-eval subnodes(children) of nodes if there are
-	-consistent values when 1="1" 1{0} 1{1} and 1{2} (dividing undivisible nodes)
-	-execute definition (to test) -> first iteration of recursive instances should be executed with missing inputs(rif==if)
--explore toBest  interaction with subnodes in instances (when can it be optimized?)
+
+
 -use mapLeft and mapRight INSTEAD of splitChildren()
 
 
 
 
--independent size of variables 0(n)=0(1) (->cmp ->eq0 ->if) <-> recursive def if?¿
-	-test a nand with one in bigger than the other (+nodes)
-	-fill with 0 on left if the size of one input is less than expected (ifdef)
--Optimize dropping ops before logical one or zero (already?). Remember to conserve size.
-	-short-circuited?
+
 
 
 
 DONE
+-independent size of variables? 0(n)=0(1) (->cmp ->eq0 ->if) <-> recursive def if?¿
+	-test a nand with one in bigger than the other (+nodes)
+	-fill with 0 on left if the size of one input is less than expected (ifdef)
+	FIXED length by now by design
+-Optimize dropping ops before logical one or zero (already?). Remember to conserve size.
+	-short-circuited?
+-explore toBest  interaction with subnodes in instances (when can it be optimized?)
+-fix eval of definitions
+	-eval subnodes(children) of nodes if there are
+	-consistent values when 1="1" 1{0} 1{1} and 1{2} (dividing undivisible nodes)
+	-execute definition (to test) -> first iteration of recursive instances should be executed with missing inputs(rif==if)
+	-always evaluate instances first, else nodes
+-eval fixed
 -change subnodes and supernodes to parents and children
 -nodeFission
 -nodeFussion
