--- a/Definitions/todo.txt
+++ b/Definitions/todo.txt
@@ -1,5 +1,5 @@
 ﻿TODO
--fix expandInstancesMapping to prevent redundant subnodes 
+-fix childrenFission to break subnodes
 -fix childrenFission to prevent redundant subnodes 
 -fix nodeFission
 -recoverSupernodes after toNand,fromNand fine tunning (need to keep account of fissed nodes?)
@@ -12,6 +12,7 @@
 -fix Definition.toNandInstances() to work on recursive definitions (-> maybe create new function or fix optimize with this in mind) 
 
 DONE
+-fix expandInstancesMapping to prevent redundant subnodes 
 -fix subnodes depth, now in instance eval is recursive on subnodes
 -bug in intersection optimization, recursive definition keeps interesction (even if it's not needed)
 -eval():nodeFission removes only instance on optimized rif
