Testing new fusion

--- a/Definitions/todo.txt
+++ b/Definitions/todo.txt
@@ -1,7 +1,6 @@
 ﻿TODO
--fix parentFission
--fix nodeFission
 -remove need to break subnodes in nodeFission
+-eval if find new recursive definition ins/outs in definitions or nandForest
 -recoverSupernodes after toNand,fromNand fine tunning (need to keep account of fissed nodes?)
 -fix cost eval 
 -fix toBest to be restrictive (subnodes etc... must be exactly the same to replace)
@@ -12,6 +11,8 @@
 -fix Definition.toNandInstances() to work on recursive definitions (-> maybe create new function or fix optimize with this in mind) 
 
 DONE
+-fix parentFission
+-fix nodeFission
 -fix childrenFission to break subnodes
 -fix childrenFission to prevent redundant subnodes 
 -fix expandInstancesMapping to prevent redundant subnodes 
