--- a/Definitions/todo.txt
+++ b/Definitions/todo.txt
@@ -12,6 +12,7 @@
 -fix Definition.toNandInstances() to work on recursive definitions (-> maybe create new function or fix optimize with this in mind) 
 
 DONE
+-removed orderedTreeSet for each level of instances in order to prevent concurrent modification (ordered key instances are different from modified ones)
 -need to keep the fissed instance instead of removing
 -fix fusion by just removing fissed instances to resurface old fused ones
 -fix fission eval priority so no need to remove out node parents
