Fixing recursive biFission TODO: fix order/dependencies: expandBinodes, subnodeChildrenFission, biFission

--- a/Definitions/todo.txt
+++ b/Definitions/todo.txt
@@ -1,5 +1,6 @@
 ﻿TODO
--reorder and maybe merge fussion
+-fix fussion of equivalentSubnodes
+-reorder and maybe merge fission
 -fix IO finding in intersection
 -check duplicate selection, may be more complex
 -fix cost eval,  unoptimized xor cost is 7
