Down to up cost eval. TODO: fix recursive eval (pre and pos recursion nodes cost) & fix zeros

--- a/Definitions/todo.txt
+++ b/Definitions/todo.txt
@@ -11,6 +11,7 @@
 -check order of all evaluations everywhere
 -todo: recursive intersection merge (if/rif)
 -change Definition to Function
+-issue: parallel representation doesn't show otpimal cost for general definitions, only for nand instances
  
 
 DONE
