--- a/Definitions/todo.txt
+++ b/Definitions/todo.txt
@@ -1,8 +1,5 @@
 ﻿TODO
--use only "rest" and "last"
--BBDD snipet en la memoria
--mul implementation
--bubble sort implementation
+-add and mul implementation
 -correct use of arrays
 -correct parallel cost (nandInstances+cost of other definitions)
 -error on "ones"
@@ -19,7 +16,6 @@
  
 
 DONE
--add implementation from full adder
 -generalize toNandInstances
 -print nandDefinition
 -change index to be "rest" and "last"
